// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot when grouped 1`] = `<p />`;

exports[`snapshot when grouped and no suite end time 1`] = `<p />`;

exports[`snapshot when not grouped and has end time 1`] = `
<p
  className="text-center text-muted"
>
  <small>
    3 days ago
  </small>
</p>
`;

exports[`snapshot when not grouped and no suite end time 1`] = `
<p
  className="text-center text-warning"
>
  <small>
    running...
  </small>
</p>
`;
